# gdw-breakout

./: .gitignore  LICENSE  Pipfile  README.md  asset_utils.py  breakout.py  breakout.spec  colors.py  pyproject.toml  text_utils.py
pages/: credits.py  game.py  main_menu.py  new_game.py  pause.py  scores.py  settings.py
