[tool.poetry]
name = "gdw-breakout"
version = "0.1.0"
description = "Another Breakout implementation."
authors = ["Jay Mandane <jvergel.mandane@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pygame = "^2.5.2"
pyinstaller = "^6.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
